--- a/blooddebtv1.4
+++ b/blooddebtv1.4
@@ -10,7 +10,7 @@ local murdererWeapons = {
 
 local sheriffWeapons = {
     ["RR-Snubby"] = true, ["GG-17"] = true, ["J9-M"] = true,
-    ["I-412"] = true, ["Silver Steel RR-Snubby"] = true
+    ["I-412"] = true, ["Silver Steel RR-Snubby"] = true, ["J9-Meretta"] = true
 }
 
 local juggernautWeapons = {
