--- a/blooddebtv1.4
+++ b/blooddebtv1.4
@@ -5,7 +5,7 @@ local murdererWeapons = {
     ["SKORPION"] = true, ["ZZ-90"] = true, ["Silver Steel K1911"] = true,
     ["Clothed Rosen-Obrez"] = true, ["Clothed Sawn-off"] = true,
     ["Kamatov"] = true, ["GILDED"] = true, ["JS-2 Bonds Derringy"] = true,
-    ["Charcoal Steel JS-22"] = true, ["Pretty Pink RR-LCP"] = true
+    ["Charcoal Steel JS-22"] = true, ["Pretty Pink RR-LCP"] = true, ["RR-LightCompactPistolS"] = true
 }
 
 local sheriffWeapons = {
