--- a/blooddebtv1.4
+++ b/blooddebtv1.4
@@ -1,6 +1,6 @@
 -- 🔫 Weapon lists
 local murdererWeapons = {
-    ["JS-2 Derringy"] = true, ["JS-22"] = true, ["RR-LCP"] = true,
+    ["JS2-Derringy"] = true, ["JS-22"] = true, ["RR-LCP"] = true,
     ["Sawn-off"] = true, ["Rosen-Obrez"] = true, ["K1911"] = true,
     ["SKORPION"] = true, ["ZZ-90"] = true, ["Silver Steel K1911"] = true,
     ["Clothed Rosen-Obrez"] = true, ["Clothed Sawn-off"] = true,
